--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,23 +3,23 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ethanlim <ethanlim@student.42.fr>          +#+  +:+       +#+         #
+#    By: cheelim <cheelim@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/11 17:53:46 by cheelim           #+#    #+#              #
-#    Updated: 2024/06/12 15:41:52 by ethanlim         ###   ########.fr        #
+#    Updated: 2024/06/13 21:05:56 by cheelim          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS = \
-ft_printchar.c ft_printf.c ft_printint.c ft_printstr.c \
-ft_printui.c
+ft_printchar.c ft_printf.c ft_printhex.c ft_printint.c \
+ft_printptr.c ft_printstr.c ft_printui.c
 
 OBJS = $(SRCS:.c=.o)
 
 
 NAME = libftprintf.a
 
-CC = gcc
+CC = cc
 
 CFLAGS = -Wall -Werror -Wextra
 
@@ -38,5 +38,8 @@ fclean : clean
 	rm -rf $(NAME)
 
 re : fclean $(NAME)
+
+compile: all
+	cc $(FLAGS) main.c -l $(NAME)
 
 .PHONY : all clean flcean re bonus
