--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,23 +6,26 @@ NAME = so_long
 
 CC = gcc
 
-SAN = -g -fsanitize=address
+SAN = -fsanitize=address -g
 
-CFLAGS = 
+CFLAGS = -Wall -Werror -Wextra
 
 all : $(NAME)
 
 $(NAME): $(OBJ)
-		@$(CC) $(OBJ) -lft -L. -lmlx -framework OpenGL -framework AppKit -o $(NAME) -L/usr/X11/lib -lX11 -lXext libft.a
+	@$(CC) $(OBJ) -lft -L. -lmlx -framework OpenGL -framework AppKit -o $(NAME) -L/usr/X11/lib -lX11 -lXext libft.a
 
 %.o: %.c
-		@gcc $(CFLAGS) -c $< -o $(<:.c=.o)
+	@$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
+
+leak: $(SRCS)
+	@$(CC) $(CFLAGS) $(SAN) $(SRCS) -lft -L. -lmlx -framework OpenGL -framework AppKit -o $(NAME)_leak_check -L/usr/X11/lib -lX11 -lXext libft.a
 
 clean :
-		@rm -f ${OBJ}
+	@rm -f ${OBJ}
 
 fclean : clean
-		@rm -f $(NAME)
+	@rm -f $(NAME)
 
 re : fclean all
 
@@ -35,4 +38,4 @@ testkey:
 key:
 	gcc keys.c -L. -lmlx -framework OpenGL -framework AppKit -L/usr/X11/lib -lX11 -lXext libft.a
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re leak
