--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,4 +1,6 @@
-SRCS = make_map.c player.c check_map.c main.c keys.c animation.c enemy.c inits.c
+SRCS = \
+make_map.c player.c check_map.c main.c keys.c \
+animation.c enemy.c inits.c check_map2.c
 
 OBJ = $(SRCS:.c=.o)
 
@@ -10,19 +12,30 @@ SAN = -g -fsanitize=address
 
 CFLAGS = -Wall -Werror -Wextra
 
+LIB = libft.a
+
+LIBDIR = libft
+
 all : $(NAME)
 
-$(NAME): $(OBJ)
+$(NAME): $(OBJ) $(LIB)
 	@$(CC) $(OBJ) -lft -L. -lmlx -framework OpenGL -framework AppKit -o $(NAME) -L/usr/X11/lib -lX11 -lXext libft.a
 
 %.o: %.c
 	@$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
+
+$(LIB) : 
+	@$(MAKE) -C $(LIBDIR)
+	@mv $(LIBDIR)/$(LIB) .
+
 
 leak: $(SRCS)
 	@$(CC) $(CFLAGS) $(SAN) $(SRCS) -lft -L. -lmlx -framework OpenGL -framework AppKit -o $(NAME)_leak_check -L/usr/X11/lib -lX11 -lXext libft.a
 
 clean :
 	@rm -f ${OBJ}
+	@rm -f $(LIB)
+	$(MAKE) -C $(LIBDIR) clean
 
 fclean : clean
 	@rm -f $(NAME)
@@ -40,5 +53,8 @@ key:
 
 pics:
 	gcc display_pics.c -L. -lmlx -framework OpenGL -framework AppKit -L/usr/X11/lib -lX11 -lXext libft.a
+
+checkmap:
+	gcc check_map.c check_map2.c libft.a
 
 .PHONY: all clean fclean re leak
