--- a/philo/Makefile
+++ b/philo/Makefile
@@ -53,7 +53,7 @@ $(BONUS_NAME) : $(BONUS_OBJ) $(LIB)
 
 bonus : fclean $(BONUS_NAME)
 
-testb: re
+test: re
 	cd LazyPhilosophersTester && ./test.sh ../philo
 
 .PHONY: all clean fclean re leak bonus
