srand is actually interesting

--- a/cpp/CPP Module 01/ex00/Makefile
+++ b/cpp/CPP Module 01/ex00/Makefile
@@ -1,9 +1,9 @@
 SRCS = \
-main.cpp Harl.cpp
+main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 
 OBJS = $(SRCS:.c=.o)
 
-NAME = harl
+NAME = zombie
 
 CC = c++
 
