--- a/webserv_test/Makefile
+++ b/webserv_test/Makefile
@@ -1,5 +1,6 @@
 SRCS = \
-Config.cpp CustomException.cpp main.cpp HTTP.cpp Server.cpp
+Config.cpp CustomException.cpp main.cpp HTTP.cpp Server.cpp Socket.cpp \
+Request.cpp
 
 OBJS = $(SRCS:.c=.o)
 
