--- a/cpp/CPP Module 06/ex01/Makefile
+++ b/cpp/CPP Module 06/ex01/Makefile
@@ -7,7 +7,7 @@ NAME = Serializer
 
 CC = c++
 
-CFLAGS = -Wall -Werror -Wextra -std=c++98
+CFLAGS = -Wall -Werror -Wextra #-std=c++98
 
 ${NAME}: ${SRCS}
 	${CC} ${CFLAGS} ${SRCS} -o ${NAME}
