wtf i hate inception so much diu

--- a/inception/srcs/Makefile
+++ b/inception/srcs/Makefile
@@ -3,12 +3,12 @@ DOCKER-COMPOSE = ./docker-compose.yml
 all: build up
 
 up:
-	docker-compose -f $(DOCKER-COMPOSE) up -d --build
+	docker compose -f $(DOCKER-COMPOSE) up -d --build
 
 down:
-	docker-compose -f $(DOCKER-COMPOSE) down
+	docker compose -f $(DOCKER-COMPOSE) down
 
 fclean:
-	docker-compose down --rmi all --volumes
+	docker compose down --rmi all --volumes
 
 re: fclean up
