--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -11,6 +11,8 @@ COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 COPY ./tools/mdbscript.sh ./mdbscript.sh
 RUN chmod 755 mdbscript.sh
 
+EXPOSE 3306
+
 #run script
 CMD ["./mdbscript.sh"]
 
