--- a/inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/inception/srcs/requirements/nginx/conf/nginx.conf
@@ -9,9 +9,9 @@ http{
         ssl_certificate_key /etc/nginx/ssl/inception.key;
 
         #root and index and server_name
-        root /var/www/html;
+        root /var/www/wordpress;
         server_name cheelim.42.fr;
-        index index.php index.html index.htm;
+        index index.php;
 
         location / {
             try_files $uri $uri/ =404;
@@ -20,6 +20,6 @@ http{
         location ~ \.php$ {	
             include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
-        }            
+        }   
     }
 }
