--- a/inception/srcs/requirements/wordpress/Dockerfile
+++ b/inception/srcs/requirements/wordpress/Dockerfile
@@ -5,7 +5,7 @@ RUN apt update && apt upgrade -y
 RUN apt-get -y install wget
 
 #install php
-RUN apt-get install -y php7.3 \
+RUN apt-get install -y php8.1 \
 php-fpm \
 php-mysql \
 mariadb-client
@@ -21,7 +21,7 @@ rm wordpress-6.0-fr_FR.tar.gz
 RUN chown -R root:root /var/www/wordpress
 
 #copy config
-COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
+COPY ./conf/www.conf /etc/php/8.1/fpm/pool.d/www.conf
 
 #install CLI
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -31,6 +31,9 @@ RUN mv wp-cli.phar /usr/local/bin/wp
 #copy init script
 COPY ./tools/autoconfig.sh ./autoconfig.sh
 RUN chmod 755 autoconfig.sh
+
+#expose port
+EXPOSE 9000 3306
 
 #run script
 CMD ["./autoconfig.sh"]
