--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:bookworm
+FROM debian:buster
 
 #install mdb
 RUN apt update && apt upgrade -y
@@ -10,6 +10,9 @@ COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 #copy script into container
 COPY ./tools/mdbscript.sh ./mdbscript.sh
 RUN chmod 755 mdbscript.sh
+
+#create socket dir
+RUN mkdir -p /var/run/mysqld && chown mysql:mysql /var/run/mysqld
 
 EXPOSE 3306
 
