--- a/inception/srcs/requirements/wordpress/Dockerfile
+++ b/inception/srcs/requirements/wordpress/Dockerfile
@@ -1,27 +1,28 @@
-FROM debian:bookworm
+FROM debian:buster
 
 #install wget
 RUN apt update && apt upgrade -y
 RUN apt-get -y install wget
 
 #install php
-RUN apt-get install -y php8.1 \
+RUN apt-get install -y php7.3 \
 php-fpm \
 php-mysql \
 mariadb-client
 
-#install wordpress using wget
-RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
+#install vim and curl
+RUN apt install vim -y
+RUN apt install curl -y
 
-#unzip the wordpress .tar file and remove the tar file
-RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && \
-rm wordpress-6.0-fr_FR.tar.gz
+#install wordpress using wget
+RUN wget https://wordpress.org/wordpress-6.0.tar.gz -P /var/www
+RUN cd /var/www && tar -xzf wordpress-6.0.tar.gz && rm wordpress-6.0.tar.gz
 
 #give perms
 RUN chown -R root:root /var/www/wordpress
 
 #copy config
-COPY ./conf/www.conf /etc/php/8.1/fpm/pool.d/www.conf
+COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
 
 #install CLI
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -31,6 +32,9 @@ RUN mv wp-cli.phar /usr/local/bin/wp
 #copy init script
 COPY ./tools/autoconfig.sh ./autoconfig.sh
 RUN chmod 755 autoconfig.sh
+
+#change lang
+
 
 #expose port
 EXPOSE 9000 3306
