--- a/inception/srcs/requirements/wordpress/conf/www.conf
+++ b/inception/srcs/requirements/wordpress/conf/www.conf
@@ -1,2 +1,13 @@
+[www]
+
+user = www-data
+group = www-data
+listen = wordpress:9000
+listen.owner = www-data
+listen.group = www-data
+pm = dynamic
+pm.max_children = 5
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 3
 clear_env = no
-listen=wordpress:9000 
