--- a/inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/inception/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,10 @@
 events {}
 
 http{
+
+    #somehow need to make sure have this if not parts of the css wont work wts
+    include /etc/nginx/mime.types;
+
     server {
         #SSL/TLS Configuration
         listen 443 ssl;
