damn learned alot tdy wts

--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -4,6 +4,9 @@ FROM debian:buster
 RUN apt update && apt upgrade -y
 RUN apt-get install mariadb-server -y
 
+#install top / ps for process viewing
+RUN apt update && apt install -y procps
+
 #copy conf
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
