--- a/inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/inception/srcs/requirements/nginx/conf/nginx.conf
@@ -2,26 +2,29 @@ events {}
 
 http{
 
-    #somehow need to make sure have this if not parts of the css wont work wts
+    #somehow need to make sure have this if not parts of the css wont work wts, literally just helps determine wat the file types are
     include /etc/nginx/mime.types;
 
     server {
-        #SSL/TLS Configuration
+        #SSL/TLS configs
         listen 443 ssl;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/inception.crt;
         ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-        #root and index and server_name
+        #server configs
         root /var/www/wordpress;
         server_name cheelim.42.fr;
         index index.php;
 
+        #locations
         location / {
+            #checks if the file / directory exist, if it does then internally modifies the url and runs the location assesment again
             try_files $uri $uri/ =404;
         }
 
         location ~ \.php$ {	
+            #includes the php config file, then passes the .php to the phpfpm in the wordpress:9000
             include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
         }   
