--- a/inception/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/inception/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,6 +1,10 @@
 [mysqld]
+user = mysql
+pid-file = /run/mysqld/mysqld.pid
+socket  = /run/mysqld/mysqld.sock
+basedir = /usr
 datadir = /var/lib/mysql
-socket  = /var/run/mysqld/mysqld.sock
+tmpdir = /tmp
+lc-messages-dir = /usr/share/mysql
 bind_address=*
 port = 3306
-user = mysql
